Kubernetes/agora-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: agora-frontend
spec:
  selector:
      app: agora-frontend
  ports:
    - protocol: TCP
      port: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: agora-frontend
spec:
  selector:
    matchLabels:
      app: agora-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: agora-frontend
        ID: "99999"
    spec:
      containers:
      - name: agora-frontend
        image: ghcr.io/acdh-oeaw/agora/agora-frontend:latest
        command: ["/bin/sh"]
        stdin: true
        tty: true
        ports:
        - containerPort: 80
        volumeMounts:
        - name: dist
          mountPath: /srv/agora/ui/dist
      volumes:
          - name: dist
            persistentVolumeClaim:
              claimName: dist
