Kubernetes/selenium-python-tests.yaml
apiVersion: v1
kind: Service
metadata:
  name: selenium-python-tests
spec:
  selector:
      app: selenium-python-tests
  ports:
    - protocol: TCP
      port: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-python-tests
spec:
  selector:
    matchLabels:
      app: selenium-python-tests
  replicas: 1
  template:
    metadata:
      labels:
        app: selenium-python-tests
        ID: "99999"
    spec:
      containers:
      - name: selenium-python-tests
        image: ghcr.io/acdh-oeaw/agora/selenium-python-tests:latest
        command: ["/bin/sh"]
        stdin: true
        tty: true
        ports:
        - containerPort: 8080
