Kubernetes/selenium.yaml
apiVersion: v1
kind: Service
metadata:
  name: selenium
spec:
  selector:
      app: selenium
  ports:
    - protocol: TCP
      port: 4444

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium
spec:
  selector:
    matchLabels:
      app: selenium
  replicas: 1
  template:
    metadata:
      labels:
        app: selenium
        ID: "99999"
    spec:
      containers:
      - name: selenium
        image: selenium/standalone-chrome
        command: []
        stdin: true
        tty: true
        ports:
        - containerPort: 80
