Kubernetes/agora-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: agora-backend
spec:
  selector:
      app: agora-backend
  ports:
    - protocol: TCP
      port: 8020

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: agora-backend
spec:
  selector:
    matchLabels:
      app: agora-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: agora-backend
        ID: "21459"
    spec:
      containers:
      - name: agora-backend
        image: ghcr.io/acdh-oeaw/agora/agora-backend
        livenessProbe:
          httpGet:
            path: /ui/auth/login
            port: 8020
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 90
        readinessProbe:
          httpGet:
            path: /ui/auth/login
            port: 8020
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 90
        command: []
        stdin: true
        tty: true
        ports:
        - containerPort: 8020
        volumeMounts:
        - name: dist
          mountPath: /srv/agora/ui/dist
      volumes:
          - name: dist
            persistentVolumeClaim:
              claimName: dist

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agora-backend
spec:
  rules:
    - host: agora-sp.acdh-dev.oeaw.ac.at
      http:
        paths:
          - backend:
              service:
                name: agora-backend
                port:
                  number: 8020
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - agora-sp.acdh-dev.oeaw.ac.at
